force-app/src/objects/c2g__SalesInvoiceConsolidationSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings that control the scope size of the Sales Invoice Consolidation and Max Lines on Sales Invoice.</description>
    <fields>
        <fullName>c2g__InvoiceConsolidationBatchScope__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Scope size for the Sales Invoice Consolidation process.</description>
        <inlineHelpText>Scope size for the Sales Invoice Consolidation process.</inlineHelpText>
        <label>SIN Consolidation Scope Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceUnconsolidationBatchScope__c</fullName>
        <defaultValue>2000</defaultValue>
        <description>Scope size for the Sales Invoice Line Items to Undo Consolidation.</description>
        <inlineHelpText>Scope size for the Sales Invoice Line Items to Undo Consolidation.</inlineHelpText>
        <label>SIN Undo Consolidation Scope Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__MaxLinesPerConsolidation__c</fullName>
        <defaultValue>9000</defaultValue>
        <description>Maximum number of lines that can be added to a consolidated sales invoice.</description>
        <inlineHelpText>Maximum number of lines that can be added to a consolidated sales invoice.</inlineHelpText>
        <label>Consolidation Line Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Invoice Consolidation Settings</label>
</CustomObject>